# kimai-timer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  dprint.json
src/: cmd.rs  main.rs  store.rs  time_ext.rs  trace.rs
src/cmd/: add.rs  in.rs  list.rs  log.rs  new.rs  out.rs  switch.rs
tests/: data_dir.rs
