[package]
name = "kimai-timer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env"] }
colored = "3.1.1"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-jsonlines = "0.7.0"
serde_json = "1.0.149"
simsearch = "0.3.0"
tabled = { version = "0.20.0", features = ["ansi"] }
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[lints.clippy]
pedantic = "warn"
